# RomaCplusplysstart

./: CMakeLists.txt  README.md  main.cpp  stepic.cpp
HomeWork_IDZ/: IDZ.cpp
HoweWork/: dz s blok shemoy.cpp  dz_c_ sin and cos.cpp  dz_c_algoritm.cpp  dz_c_for_1.cpp  dz_c_for_2.cpp  dz_s_for.cpp  dz_s_for_3.cpp
IDZ/: idz1.cpp  idz2.cpp  idz3.cpp  idz_dinamPamayt_1.cpp  idz_dinamPamayt_2.cpp  idz_klass_1.cpp  idz_s_ while1.cpp  idz_s_file_1.cpp  idz_s_file_2.cpp  idz_s_massiv.cpp  idz_s_massiv_2.cpp  idz_s_struct.cpp  idz_s_while2.cpp  idz_so_strokami_2.cpp  idz_so_strokami_3.cpp  idz_so_strokani.cpp  my_lib.h
