cmake_minimum_required(VERSION 3.23)
project(RomaCplusplysstart)

set(CMAKE_CXX_STANDARD 14)

add_executable(RomaCplusplysstart main.cpp "HoweWork/dz s blok shemoy.cpp" "HoweWork/dz_c_ sin and cos.cpp" stepic.cpp IDZ/idz1.cpp IDZ/idz2.cpp IDZ/idz3.cpp "IDZ/idz_s_ while1.cpp" IDZ/idz_s_while2.cpp IDZ/my_lib.h)
